# ai-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yaml
ai_assistant/: __main__.py  api.py  cli.py  configs.py  message_store.py  relevancy.py  tools.py  utils.py
ai_assistant/tests/: test_message_store.py  test_tools.py
