[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "editdistance>=0.8.1",
    "smolagents[litellm]>=1.19.0",
    "sqlglot[rs]>=27.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120
