[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "python-levenshtein>=0.27.1",
    "smolagents[litellm]>=1.19.0",
    "sqlglot>=27.0.0",
    "fastapi>=0.116.1",
    "scalar-fastapi>=1.2.1",
    "uvicorn>=0.35.0",
    "redis>=6.2.0",
    "uuid>=1.30",
    "google-genai>=1.26.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120
